--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Vietnam Tourism: Visit interesting landscapes in Vietnam</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="kPqbWfO5d0FvWY9lNDxeveES6gwEFxjRN5QYINAE9Eo"/>
   <meta name="description" content="Vietnam Tourism page is a high quality travel site for foreigner travelers"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
