--- a/Services.html
+++ b/Services.html
@@ -104,7 +104,7 @@ footer .glyphicon {
 
         <div class="collapse navbar-collapse" id="myNavbar">
                <ul class="nav navbar-nav navbar-right">
-                <li><a href="Hompage.html">HOMEPAGE</a></li>
+                <li><a href="index.html">HOMEPAGE</a></li>
                 <li><a href="Destinations.html">DESTINATIONS</a></li>
                 <li><a href="Services.html">SERVICES</a></li>
                 <li><a href="Travel Blog.html">TRAVEL BLOG</a></li>
