--- a/index.html
+++ b/index.html
@@ -140,21 +140,21 @@ footer .glyphicon {
           <img src="ha-giang-vietnam.jpg" alt="Ha Giang Province" style="width:100%;">
           <div class="carousel-caption">
             <h3>Ha Giang</h3>
-             <p>Ha GIang is always an interesting destination.</p>
+             <p>An interesting destination.</p>
           </div>
         </div>
         <div class="item">
           <img src="cat-ba-vietnam.jpg" alt="Cat Ba Island" style="width:100%;">
           <div class="carousel-caption">
             <h3>Cat Ba</h3>
-            <p>The land of beautiful landscapes.</p>
+            <p>A beautiful landscape.</p>
           </div>
         </div>
         <div class="item">
           <img src="ho-chi-minh-city-vietnam.jpg" alt="Ho Chi Minh City" style="width:100%;">
           <div class="carousel-caption">
             <h3>Ho Chi Minh City</h3>
-              <p>The big city of Vietnam.</p>
+              <p>The largest city of Vietnam.</p>
           </div>
         </div>
       </div>
